--- a/source/templates/menu.mustache
+++ b/source/templates/menu.mustache
@@ -1,10 +1,15 @@
 
 
-{{! <a href="#" class="app__nav__link">
+{{^auth_info}}
+<a href="#" class="app__nav__link" id="app__nav__link--facebook">Sign In with Facebook</a>
+{{/auth_info}}
+
+{{#auth_info}}
+<a href="#" class="app__nav__link">
 	<img src="" class="app__nav__image">
 	Edouard Trong
-</a> }}
-<a href="#" class="app__nav__link" id="app__nav__link--facebook">Sign In with Facebook</a>
+</a>
 <a href="#" class="app__nav__link swapp-star">Favorites</a>
 <a href="#" class="app__nav__link swapp-tool">Settings</a>
 <a href="#" class="app__nav__link swapp-unlock">Log out</a>
+{{/auth_info}}
