--- a/source/templates/users_view.mustache
+++ b/source/templates/users_view.mustache
@@ -1,3 +1,9 @@
 <img src="https://graph.facebook.com/{{fb_uid}}/picture?type=large" class="item__owner_image">
 <h1>{{firstname}} <span class="thin">{{lastname}}</span></h1>
-<h2>Swapper since {{created_at}}</h2>
+<h2>Swapper since {{date}}</h2>
+
+<section class="grid grid--center items" id="items">
+
+
+
+</section>
