--- a/source/stylesheets/_3.modules.scss
+++ b/source/stylesheets/_3.modules.scss
@@ -36,6 +36,23 @@
 	margin-bottom: 1.5em;
 }
 
+
+	.item__star {
+		position: absolute;
+		top: -0.2em;
+		left: -0.2em;
+
+		z-index: 2;
+
+		color: $lightgray--dark;
+		font-size: 1.5em;
+
+		&:hover {
+			color: $sunflower;
+		}
+	}
+
+
 	.item__images {
 		position: relative;
 
@@ -79,7 +96,7 @@
 		}
 
 		.item__owner_image {
-			border: 0.5em solid white;
+			border: 0.3em solid white;
 			border-radius: 50%;
 
 
