Logout and menu FIX

--- a/source/stylesheets/_3.modules.scss
+++ b/source/stylesheets/_3.modules.scss
@@ -47,6 +47,9 @@
 		color: $lightgray--dark;
 		font-size: 1.5em;
 
+
+		@include transition(color 0.3s);
+
 		&:hover {
 			color: $sunflower;
 		}
