--- a/source/templates/items_index_item.mustache
+++ b/source/templates/items_index_item.mustache
@@ -3,7 +3,10 @@
 <article class="col span4 mobile--span12 item">
 	<div class="item__images">
 		<a href="#"><i class="item__star swapp-star"></i></a>
-		<a href="/items/{{id}}" class="item__image__link"><div style="background-image:url('{{image}}')" class="item__image"></div></a>
+		<a href="/items/{{id}}" class="item__image__link">
+			<div style="background-image:url('{{image}}')" class="item__image"></div>
+			<div class="item__image__highlight"><span class="item__image__highlight__plus"></span></div>
+		</a>
 		<a href="/users/{{user.id}}" class="item__owner_link"><img src="https://graph.facebook.com/{{user.fb_uid}}/picture" class="item__owner_image"></a>
 	</div>
 	<a href="/items/1"><h2 class="item__title">{{title}}</h2></a>
