Bell is working - notifications

--- a/source/stylesheets/_2.layout.scss
+++ b/source/stylesheets/_2.layout.scss
@@ -83,7 +83,14 @@ img {
 	width: 18em;
 }
 
+.app__notifications {
+	position: fixed;
+	top: 4.5em;
+	right: 0;
+	z-index: 199;
 
+	width: 18em;
+}
 
 
 
