--- a/source/layouts/app.erb
+++ b/source/layouts/app.erb
@@ -8,12 +8,16 @@
 	<a href="/" class="app__header__logo"><i class="swapp-logotype"></i></a>
 
 	<div class="app__header__right">
-		<button class="app__header__btn app__header__btn--alerts"><i class="swapp-bell"></i></button>
+		<button class="app__header__btn app__header__btn--notifications" id="app__header__btn--notifications"><span class="count"></span><i class="swapp-bell"></i></button>
 	</div>
 </header>
 
 
 <nav class="app__nav" id="app__nav">
+	
+</nav>
+
+<nav class="app__notifications" id="app__notifications">
 	
 </nav>
 
