Favorites are somewhat working

--- a/source/templates/items_index_item.mustache
+++ b/source/templates/items_index_item.mustache
@@ -2,7 +2,7 @@
 
 <article class="col span4 mobile--span12 item">
 	<div class="item__images">
-		<a href="#"><i class="item__star swapp-star"></i></a>
+		<a href="#"><i class="item__star swapp-star {{#favorited}}active{{/favorited}}"></i></a>
 		<a href="/items/{{id}}" class="item__image__link">
 			<div style="background-image:url('{{image}}')" class="item__image"></div>
 			<div class="item__image__highlight"><span class="item__image__highlight__plus"></span></div>
