--- a/source/templates/notifications_item.mustache
+++ b/source/templates/notifications_item.mustache
@@ -1,4 +1,14 @@
-<a href="users/{{user.id}}" class="app__nav__link swapp-right">
-	<img src="https://graph.facebook.com/{{user.fb_uid}}/picture" class="app__nav__image">
-	{{user.firstname}}<br />{{item.title}}
-</a>
+<li data-contact-id="{{id}}">
+	<a href="items/{{their_item.id}}" class="app__nav__link swapp-right">
+			<img src="https://graph.facebook.com/{{them.fb_uid}}/picture" class="app__nav__image">
+
+		{{#is_initiator}}
+		You aksed <strong>{{them.firstname}}</strong> to trade {{gender_word}} <strong>{{item_requested.title}}</strong> for your <strong>{{item_initiator.title}}</strong>
+		{{/is_initiator}}
+		{{^is_initiator}}
+			<strong>{{them.firstname}}</strong> wants to swapp your <strong>{{item_requested.title}}</strong> for {{gender_word}} <strong>{{item_initiator.title}}</strong>
+		{{/is_initiator}}
+	</a>
+	<a class="btn-accept">Accept</a>
+	<a class="btn-reject">Reject</a>
+</li>
