--- a/source/templates/items_index_item.mustache
+++ b/source/templates/items_index_item.mustache
@@ -7,7 +7,7 @@
 			<div style="background-image:url('{{image}}')" class="item__image"></div>
 			<div class="item__image__highlight"><span class="item__image__highlight__plus"></span></div>
 		</a>
-		<a href="/users/{{user.id}}" class="item__owner_link"><img src="https://graph.facebook.com/{{user.fb_uid}}/picture" class="item__owner_image"></a>
+		<a href="/users/{{user.id}}" class="item__owner_link"><img src="https://graph.facebook.com/{{user.fb_uid}}/picture?width=200&height=200" class="item__owner_image"></a>
 	</div>
 	<a href="/items/1"><h2 class="item__title">{{title}}</h2></a>
 </article>
