--- a/source/templates/items_view.mustache
+++ b/source/templates/items_view.mustache
@@ -1,1 +1,18 @@
-{{title}}
+<div class="header__bar header__bar--item"></div>
+
+<section class="grid">
+	<header class="item__header col span6 mobile--span12">
+		<div class="header__image header__image--item" style="background-image:url('{{image}}')">
+			<a href="/users/{{user.id}}" class="item__owner_link"><img src="https://graph.facebook.com/{{user.fb_uid}}/picture?width=200&height=200" class="item__owner_image"></a>
+		</div>
+
+		<h1 class="item__header__h1">{{title}} <span class="thin item__header__condition">&ndash; {{condition}}</span></h1>
+		<h2 class="item__header__h2 thin">Uploaded on the {{date}}</h2>
+	</header>
+
+	<div class="item__meta col span6 mobile--span12">
+		<p class="item__description"><strong>Description:</strong> {{description}}</p>
+		<a href="/items/{{id}}/swap" class="button button--full button--icon"><i class="swapp-star"></i> Add to Favorites</a>
+		<a href="/items/{{id}}/swap" class="button button--full button--icon button--swapp"><i class="swapp-logo"></i> Propose a Swapp</a>
+	</div>
+</section>
