--- a/source/stylesheets/_1.base.scss
+++ b/source/stylesheets/_1.base.scss
@@ -19,6 +19,7 @@ $bittersweet--darker: darken(#e9573f, 20%);
 
 $aqua: #4fc1e9;
 $aqua--dark: #3bafda;
+$aqua--darker: darken(#3bafda, 5%);
 
 $grass: #a0d468;
 $grass--dark: #8cc152;
@@ -29,6 +30,7 @@ $mint--darker: darken(#37bc9b, 5%);
 
 $sunflower: #ffce54;
 $sunflower--dark: #f6bb42;
+$sunflower--darker: darken(#f6bb42, 5%);
 
 
 /* Fonts */
