--- a/source/stylesheets/_2.layout.scss
+++ b/source/stylesheets/_2.layout.scss
@@ -89,7 +89,7 @@ img {
 	right: 0;
 	z-index: 199;
 
-	width: 18em;
+	width: 22em;
 }
 
 
@@ -105,7 +105,7 @@ img {
 
 	overflow-y: auto;
 
-	padding: 4.5em 0 0;
+	padding: 4.5em 0 6em;
 }
 
 	.proposals__button {
