--- a/source/templates/items_swap.mustache
+++ b/source/templates/items_swap.mustache
@@ -21,7 +21,7 @@
 				<span class="proposal__title">{{title}}</span>
 			</li>
 		{{/swapper_items}}
-			<li class="proposal proposal--new">
+			<a href="/items/new"><li class="proposal proposal--new">
 				<span class="proposal__title">Upload a new Swapp</span>
 			</li>
 		</ul>
