--- a/source/templates/users_view.mustache
+++ b/source/templates/users_view.mustache
@@ -7,7 +7,14 @@
 		<h1 class="profile__header__h1">{{firstname}} <span class="thin">{{lastname}}</span></h1>
 		<h2 class="profile__header__h2 thin">Swapper since {{date}}</h2>
 	</header>
+
+	<a href="/items/new" class="col span12 big-bottom">
+		<div class="proposal proposal--new">
+			<span class="proposal__title">Upload a new Swapp</span>
+		</div>
+	</a>
 </section>
+
 
 
 <section class="grid grid--center items items--profile" id="items">
