Upload link juste sur ton propre profile

--- a/source/templates/notifications_item.mustache
+++ b/source/templates/notifications_item.mustache
@@ -3,7 +3,7 @@
 
 	{{#is_initiator}}
 		{{#is_pending}}
-			You aksed <strong>{{them.firstname}}</strong> to trade {{gender_word}} <strong>{{item_requested.title}}</strong> for your <strong>{{item_initiator.title}}</strong>
+			You asked <strong>{{them.firstname}}</strong> to trade {{gender_word}} <strong>{{item_requested.title}}</strong> for your <strong>{{item_initiator.title}}</strong>
 		{{/is_pending}}
 		{{#is_accepted}}
 			<strong>{{them.firstname}}</strong> accepted to trade {{gender_word}} <strong>{{item_requested.title}}</strong> for your <strong>{{item_initiator.title}}</strong>
