--- a/source/templates/menu.mustache
+++ b/source/templates/menu.mustache
@@ -11,7 +11,7 @@
 	{{firstname}} {{lastname}}
 </a>
 {{/info}}
-<a href="items/favorites" class="app__nav__link swapp-right"><i class="swapp-star"></i> Favorites</a>
+<a href="/favorites" class="app__nav__link swapp-right"><i class="swapp-star"></i> Favorites</a>
 <a href="#" class="app__nav__link swapp-right"><i class="swapp-wrench"></i> Settings</a>
 <a href="#" class="app__nav__link swapp-right" id="app__nav__link--logout"><i class="swapp-unlock"></i> Log out</a>
 {{/auth_info}}
