--- a/source/stylesheets/_1.base.scss
+++ b/source/stylesheets/_1.base.scss
@@ -69,6 +69,18 @@ a {
 
 
 
+.no-top {
+	border-top-left-radius: 0 !important;
+	border-top-right-radius: 0 !important;
+}
+
+.no-bottom {
+	border-bottom-left-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+}
+
+
+
 
 
 /* Mixins */
