--- a/source/stylesheets/_2.layout.scss
+++ b/source/stylesheets/_2.layout.scss
@@ -80,7 +80,8 @@ img {
 	left: 0;
 	z-index: 199;
 
-	width: 18em;
+	width: 100%;
+	max-width: 18em;
 }
 
 .app__notifications {
@@ -89,7 +90,8 @@ img {
 	right: 0;
 	z-index: 199;
 
-	width: 22em;
+	width: 100%;
+	max-width: 22em;
 }
 
 
