Tablet view pour les items

--- a/source/templates/items_index_item.mustache
+++ b/source/templates/items_index_item.mustache
@@ -1,6 +1,6 @@
 
 
-<article class="col span4 mobile--span12 item">
+<article class="col span4 tablet--span6 mobile--span12 item">
 	<div class="item__images">
 		<i class="item__star swapp-star{{#favorited}} item__star--active{{/favorited}}" data-id="{{id}}"></i>
 		<a href="/items/{{id}}" class="item__image__link">
