--- a/source/stylesheets/_3.modules.menu.scss
+++ b/source/stylesheets/_3.modules.menu.scss
@@ -76,8 +76,9 @@
 
 		.app__nav__link--notification {
 			line-height: 1.2em;
+			vertical-align: middle;
 
-			padding: 1.5em;
+			padding: 1.2em;
 
 			strong {
 				font-weight: 300;
@@ -91,8 +92,8 @@
 			width: 2em;
 			vertical-align: middle;
 
-			padding: 0.5em 0;
-			margin-right: 0.7em;
+			margin: 0.5em 0.7em 0.5em 0;
+			
 
 			border-radius: 50%;
 
@@ -100,6 +101,8 @@
 			.app__nav__link--notification & {
 				float: left;
 				width: 3em;
+
+				margin-top: 0;
 			}
 		}
 
