--- a/source/stylesheets/_3.modules.proposals.scss
+++ b/source/stylesheets/_3.modules.proposals.scss
@@ -63,3 +63,16 @@
 				color: white;
 			}
 		}
+
+
+	.proposal__buttons {
+		margin-top: 2em;
+	}
+
+	.proposal__h1 {
+		text-align: center;
+
+		margin-bottom: 2em;
+	}
+
+
