--- a/source/templates/items_index_item.mustache
+++ b/source/templates/items_index_item.mustache
@@ -9,5 +9,5 @@
 		</a>
 		<a href="/users/{{user.id}}" class="item__owner_link"><img src="{{#user.fb_uid}}https://graph.facebook.com/{{user.fb_uid}}/picture?width=200&height=200{{/user.fb_uid}}" class="item__owner_image"></a>
 	</div>
-	<a href="/items/1"><h2 class="item__title">{{title}}</h2></a>
+	<a href="/items/{{id}}"><h2 class="item__title">{{title}}</h2></a>
 </article>
