--- a/source/stylesheets/_1.base.scss
+++ b/source/stylesheets/_1.base.scss
@@ -32,6 +32,10 @@ $sunflower: #ffce54;
 $sunflower--dark: #f6bb42;
 $sunflower--darker: darken(#f6bb42, 5%);
 
+$grapefruit: #ed5565;
+$grapefruit--dark: #da4453;
+$grapefruit--darker: darken(#da4453, 5%);
+
 
 /* Fonts */
 $header_font: "Raleway", sans-serif;
@@ -69,14 +73,30 @@ a {
 
 
 
+.hide {
+	display: none !important;
+	visibility: hidden !important;
+}
+
+
 .no-top {
 	border-top-left-radius: 0 !important;
 	border-top-right-radius: 0 !important;
 }
 
+.no-right {
+	border-top-right-radius: 0 !important;
+	border-bottom-right-radius: 0 !important;
+}
+
 .no-bottom {
 	border-bottom-left-radius: 0 !important;
 	border-bottom-right-radius: 0 !important;
+}
+
+.no-left {
+	border-top-left-radius: 0 !important;
+	border-bottom-left-radius: 0 !important;
 }
 
 
