Hahah j'ai actually écrit la class hide

--- a/source/templates/items_new.mustache
+++ b/source/templates/items_new.mustache
@@ -8,7 +8,7 @@
 
 	<section class="grid">
 		<div class="col span6 mobile--span12">
-			<div class="hide item-new__field">
+			<div class="item-new__field">
 				<input type="file" id="imageLoader" name="imageLoader"/>
 			</div>
 
