--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -20,7 +20,7 @@
     
     
     
-    <link href='http://fonts.googleapis.com/css?family=Raleway:700,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic' rel='stylesheet' type='text/css'>
     
 
     
