--- a/source/layouts/app.erb
+++ b/source/layouts/app.erb
@@ -8,8 +8,8 @@
 	<a href="/" class="app__header__logo"><i class="swapp-logotype"></i></a>
 
 	<div class="app__header__right">
-		<button class="app__header__btn app__header__btn--search" id="app__header__btn--search"><i class="swapp-search"></i></button>
-		<button class="app__header__btn app__header__btn--notifications" id="app__header__btn--notifications"><span class="count"></span><i class="swapp-bell"></i></button>
+		<button class="app__header__btn app__header__btn--search" id="app__header__btn--search"><i class="swapp-search"></i></button><!-- 
+		 --><button class="app__header__btn app__header__btn--notifications" id="app__header__btn--notifications"><span class="count"></span><i class="swapp-bell"></i></button>
 	</div>
 </header>
 
