--- a/source/stylesheets/_3.modules.buttons.scss
+++ b/source/stylesheets/_3.modules.buttons.scss
@@ -148,7 +148,7 @@
 
 		&.app__header__btn--active {
 			color: $darkgray--dark;
-			background: white;
+			background: $white--transparent;
 		}
 	}
 
